<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_leaderboard"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/title_activity_leaderboard"
        app:showAsAction="always"/>
</menu>